## Version 2.0.2

* Feature: Add DxFeedReconnectSample
* Fix: Schedule memory leak

## Version 2.0.1

* Fix: Exception when closing an app under .NET Framework

## Version 2.0.0

* Build all samples into one directory to reduce the size on disk
* Keep only self-contained builds for DxFeed.Graal.Net.Tools
* Add compatibility with netstandard 2.0
  - BACKWARD-INCOMPATIBLE CHANGE:
  The list of event flags moves from the IIndexedEvent interface to the new EventFlags class.
  - BACKWARD-INCOMPATIBLE CHANGE:
  Method GetEventTypes moves from the IEventType interface to DXEndpoint class.
* Fix copyright header in Utils
* Fix build warnings
* Bump StyleCop.Analyzers
* Fix CodeQL workflow

## Version 1.3.1

* Fix receiving Greeks and TheoPrice via dxLink

## Version 1.3.0

* Bump GraalVM to JDK 22.0.1
* Add OtcMarketsOrder and #pink source
* Add Schedule
* Fix an error when the isolate was not created in the main thread
* Add Custom Marshalers and Graal parsers
* Add TimeFormat, TimePeriod and SymbolParser
* Add GetSymbols and SetSymbols for DXFeedSubscription

## Version 1.2.1

* Improve TimeSeriesEventAsync public API

## Version 1.2.0

* Add TimeSeriesEventAsync

## Version 1.1.0

* Add qds-tools
* Add force-stream options for tools
* Fix sample for dxLink in Readme

## Version 1.0.0

* Reduce memory consumption
* Improve performance
* Fix token-based authorization in dxLink
* Bump DxFeed.Graal.Native.SDK

## Version 0.8.0

* Update README.MD
* Add dependencies and third party license
* Fix DocFX template

## Version 0.7.0

* Change lifetime management for objects created by GraalVM
* Add builds for net7.0 and net8.0

## Version 0.6.0

* Bump DxFeed.Graal.Native.SDK
* Add IpfConnection

## Version 0.5.0

* Add InstrumentProfileReader

## Version 0.4.0

* Fix: Readme and docs

## Version 0.3.0

* Feature: Add Help Tool
* Feature: Add Help articles
* Feature: Add LatencyTest tool
* Fix: CandleSymbol
* Feature: Add Candle Sample
* Fix: Update readme

## Version 0.2.1
