@@ -4,7 +4,6 @@
 // If a copy of the MPL was not distributed with this file, You can obtain one at http://mozilla.org/MPL/2.0/.
 // </copyright>
 
-using System;
 using System.Collections.Generic;
 using DxFeed.Graal.Net.Auth;
 using DxFeed.Graal.Net.Native.Ipf;
