@@ -1,3 +1,6 @@
+* [MDAPI-21] [Java] [SDK] NoSuchMethodError exception when creating a monitoring endpoint
+* [MDAPI-19] [.NET] [IPF] Allow set Bearer token for authentication
+
 ## Version 2.0.2
 
 * Feature: Add DxFeedReconnectSample
